# AnyChat

./: .gitignore  AGENTS.md  CHANGELOG.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx  db.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_penalty_fields.sql  003_add_usage_provider.sql  004_add_tool_call_id.sql  005_add_tool_calls.sql  006_add_tool_nodes.sql  007_relax_provider_fk.sql
src-tauri/src/: api_client.rs  error.rs  lib.rs  main.rs  store.rs  web_fetch.rs  webview_bridge.rs
src-tauri/src/commands/: body.rs  conversation.rs  message.rs  mod.rs  provider.rs  sse.rs  tools.rs  types.rs
src/components/: AttachmentBar.tsx  ChatBubble.tsx  ConfirmDialog.tsx  Icons.tsx  Layout.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  ProviderSwitcher.tsx  ReaderOverlay.tsx  SettingsModal.tsx  Sidebar.tsx  ThinkingToggle.tsx  ToolLogSheet.tsx  ToolNodeDisplay.tsx
src/constants/: attachments.ts  defaults.ts
src/hooks/: useAutoScroll.ts  useBackHandler.ts  useFileAttachment.ts  useReaderMode.ts  useWebViewFetchFallback.ts
src/pages/: ChatPage.tsx  HomePage.tsx  ProviderEditPage.tsx  SettingsPage.tsx
src/stores/: chatApi.ts  chatNormalizers.ts  chatStore.ts  providerStore.ts  themeStore.ts
src/types/: index.ts
src/utils/: backButtonManager.ts
